--- a/web/assets/new_rekmed_asset/css/spinners.css
+++ b/web/assets/new_rekmed_asset/css/spinners.css
@@ -26,7 +26,7 @@
   animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
   stroke-linecap: round;
 }
-@keyframes rotate {
+/* @keyframes rotate {
   100% {
     transform: rotate(360deg);
   }
@@ -1343,4 +1343,4 @@
 :hover > .anchorjs-link:hover {
   text-decoration: none;
   opacity: 1;
-}
+} */
