--- a/web/assets/new_rekmed_asset/css/style.css
+++ b/web/assets/new_rekmed_asset/css/style.css
@@ -29,7 +29,7 @@ File: scss
 /*Normal Color*/
 /*Extra Variable*/
 /*Preloader*/
-/* @import url(../scss/icons/font-awesome/css/font-awesome.min.css); */
+@import url(../scss/icons/font-awesome/css/font-awesome.min.css);
 /* @import url(../scss/icons/simple-line-icons/css/simple-line-icons.css); */
 /* @import url(../scss/icons/weather-icons/css/weather-icons.min.css); */
 /* @import url(../scss/icons/linea-icons/linea.css); */
